# ChangeLog for dev-python/pympler
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pympler/ChangeLog,v 1.15 2013/09/08 12:24:29 ago Exp $

  08 Sep 2013; Agostino Sarubbo <ago@gentoo.org> pympler-0.3.1.ebuild:
  Stable for amd64, wrt bug #481896

  04 Sep 2013; Agostino Sarubbo <ago@gentoo.org> pympler-0.3.1.ebuild:
  Stable for ppc, wrt bug #481896

  03 Sep 2013; Agostino Sarubbo <ago@gentoo.org> pympler-0.3.1.ebuild:
  Stable for ia64, wrt bug #481896

  21 Aug 2013; Justin Lecher <jlec@gentoo.org> pympler-0.3.1.ebuild:
  Fix [${PYTHON_USEDEP}]

  12 Jul 2013; Vicente Olivert Riera <vincent@gentoo.org> pympler-0.3.1.ebuild:
  ppc, ppc64 keywords added, bug #468426

  03 May 2013; Sergey Popov <pinkbyte@gentoo.org> pympler-0.3.1.ebuild:
  Readd ~arm keyword, wrt bug #468426

*pympler-0.3.1 (03 May 2013)

  03 May 2013; Justin Lecher <jlec@gentoo.org> +pympler-0.3.1.ebuild,
  metadata.xml:
  Version BUmp, #468358; drop pypy as support ist broken

  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> pympler-0.2.0.ebuild:
  Add ~arm, wrt bug #449220

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> pympler-0.2.0.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> pympler-0.2.0.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> pympler-0.2.0.ebuild:
  Add ~ia64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> pympler-0.2.0.ebuild:
  Add ~ppc64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> pympler-0.2.0.ebuild:
  Add ~ppc, wrt bug #449220

  16 Feb 2012; Justin Lecher <jlec@gentoo.org> pympler-0.2.0.ebuild:
  Remove PYTHON_DEPEND as all python version are supported, thanks Arfrever for
  helping

*pympler-0.2.0 (16 Feb 2012)

  16 Feb 2012; Justin Lecher <jlec@gentoo.org> +pympler-0.2.0.ebuild,
  +metadata.xml:
  Initial commit written by me