@@ -1,25 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST python-geoclue-0.1.0.tar.gz 61062 SHA256 51748c22244f974854eacbf518a11a72cdf76045b7ab9cae44b7a592dfa4e259 SHA512 844c877038f9b8db096a33605be16f8aaea8e66fa84e3a42927f103afa9c8ab565b28cc69b9d02d30bfd02a20e6e20e7fdf28a7d06900db9d288775bb153c533 WHIRLPOOL b59fc942e9686e55f8a6d2aab2a335f51b0f8de4a13bd6d9f3945cabd5133fffd125b7373f3dc9c9b7941d66ef27e41aa832cf3e2f1ca332dfd6376b5dedaa08
-EBUILD python-geoclue-0.1.0-r1.ebuild 926 SHA256 4e8a2183816bb37cc2c9d87d9aa3c8cdf536a496041248243b8eccd74a9af5c2 SHA512 9a6276aa9838773ff1ef303d55e25580625854ac794c5c438355549c6fc638c89183fdd1232a721565b5ab4f6b22d94a9db649c73f89611f6a31583d71690be1 WHIRLPOOL df0d9404563f64acdf111f9cbf1cfd93f69f62b8857bef336012d692429ad50fe91a62ecf7d93276b37605740d2e895c2a8bba3445e54ab7667da293e78651ea
+EBUILD python-geoclue-0.1.0-r1.ebuild 928 SHA256 782e9f2adece2d2b8e07bfba45fa3f80edefa9d1fbda20789b1bff3831f4d50a SHA512 d58313ceaa57744e225f7d4f73b3a1e332d9f2a29fea003278655e6f1b571b4099cb7d6e1031fb32f43938a7fde1360d1d6636dc924f1f2569700194eafc0df8 WHIRLPOOL 5a57da70a648806188bf0286ea03901af38fcba17c605ecc47ee8ea6622fb24030ef5e9e8410492df2f4198ff9ab2b68f7326892c46cc80712f929d7520aea94
 EBUILD python-geoclue-0.1.0.ebuild 936 SHA256 53bacd9dbf782fc7f80e3db7f36f8f2630058c190a88f178d44435794b81dead SHA512 7c4161dc313f1e1260bc5d202b259eaae7be64f49d23667fdb9bebf5c9e668c304ff9ce40d4a17319533475ee6ca8841dab8f1883553ec9fe2e67782bcb3e330 WHIRLPOOL 1d0f40f3c675fd1e5c6510dfef87157f6e9675c5c8eb9da7ab22a849a7a1f1b8f2ffa62fa72ec0716bcecdc24b8f16d0bacb652df6cb251d43d7292b4862164d
-MISC ChangeLog 2002 SHA256 8e27a44c0599db7f37441dfbcceea60d1d09e425d1a89472d4dbe95d58cf2a43 SHA512 27e0442cd011e5b08c6c925d995c874e1cc5c6af56798470f900decf33b91057c59f2a41080737530379f1570f74aebc4467a593edafaad8c0e30cc2fc9a0e1d WHIRLPOOL 573fe747fd055680405e9e9a4e2fcb301acbf66352b8f61f62c7b898a85c404e7185b777a9e4ee35bc525e009ed4bbe8051f409101361dc8edb50f27a5c8484c
+MISC ChangeLog 2112 SHA256 b96be3c9445b4940f8b151fdee2b4b2b9e6cd80c029a36618f83e0e53bb8eae5 SHA512 0f16633c5a35717d3de66552ae17791104890fba9b6650bf31ade7959942a2ff1ae87d937bbd1ce821078d7f655fbf3ed3e241b13a265ac4b9df2f280e2e8583 WHIRLPOOL 6f8e0abff76c7a974cc1f76690b2d01c8b252e4c80e2e4f19fbd6a71023ee26a32c8b61ec2d577ecfe2c6802387a0e10ea3b7bcb1e679ca458fafe7d5ce1b433
 MISC metadata.xml 227 SHA256 aef43758cae524923aefea72b3a1f2896b3dcca8d0135dc75a08149549388105 SHA512 40677314811b092252949d13d1d07aaf721f7e8ba47da28ac21239f881e7c919bcad9384d2f0bf0eff95e11912443aa1f2bab7e94e1a3029c9aa97a3654795dc WHIRLPOOL 1ce8a3cc4ae9ce91daa6bd030e5be25fdbee0fc29e14b943024c932cff8d6da58c6d152d02fb8703fc285331f3dd010ec832f8a5ddb18c7cd33c9ae97507dd76
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSLGxnAAoJELp701BxlEWfeyIP/0Jpg2z/7pNFhCC1RaM9QtNz
-g3Mh7M9W/jBn2I8TlLgQB+0QyOKlGX9t6I/qfFVUT/Jk0QbUuUVk996txrdc8uWk
-UYdrBQ5NjjqVplrDcYyW6QWQkBnDO9GXI+DJj9sFgyDm2eFxETideg9YGphzNafL
-syUuupBOgAoYiwdFmDs0OhuM5W3Jds2jy1TtGgXKEJ1d/wY9SHDf1WuzG37E/Zz9
-Q3bsI6MKXxKsItB2nslipB4bP2zRrZahECoQvCAtOrIhrI9wDCqPOJdG/3qygRHi
-04PEfDd0QTayXUiWh7ppe8enc+7Yg0GMj3LiBKIjOWkjmuhnZf2FZn0roGeBC6xy
-dcxQokIE92o8Gzcqmbt1MuBiyEX6fSdz4DmGzHKp2OzOhr7XtxgOswhNg7enD2Ds
-ey1ROKYZ3yqRvWRIFsO6KzmBE3AsFmYoTtdUOeFGnlPQL8oc4E3+BPHGGPGLtjeO
-Udw7gU+9pCJSyjHcM3j38rC2/VCT+bP3IyUPhAQVsUFEAGmS67q8X/uH/uDyf9NF
-zv7QErx7IrrgDrsjYqKO4lvxpe7WhNzmcJ2WWoBDuDcGbl4JMpMFGQJZo8Kr4gg2
-aDJDbO+SdXacwOqG87gLDHXGVVz0AwC4qVE8SmpAgNnlgFQYx5KyR8PiD7eeH/bv
-igfp9WXNIG7e48xqe65+
-=D+3D
+iEYEAREIAAYFAlIshJQACgkQkKaRLQcq0GIcaQCgm+QVmSP7ySWvRWLsqElV21FL
+sykAnjGthMnjhSD6hyCq0IJ+wiP54Llf
+=p/Vu
 -----END PGP SIGNATURE-----
