@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-geoclue/python-geoclue-0.1.0-r1.ebuild,v 1.5 2013/09/08 12:24:25 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-geoclue/python-geoclue-0.1.0-r1.ebuild,v 1.6 2013/09/08 14:01:07 maekke Exp $
 
 EAPI=5
 
@@ -13,7 +13,7 @@ HOMEPAGE="http://live.gnome.org/gtg/soc/python_geoclue/"
 SRC_URI="http://www.paulocabido.com/soc/${PN}/${P}.tar.gz"
 
 SLOT="0"
-KEYWORDS="~alpha amd64 ~arm ia64 ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux"
+KEYWORDS="~alpha amd64 arm ia64 ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux"
 LICENSE="GPL-3"
 IUSE="test"
 
