@@ -1,29 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST sqlparse-0.1.3.tar.gz 43369 SHA256 5f870d293ecdaba8baace52536dd9a34884ed3775990c058ecfd1d23499d7e63 SHA512 71b52ef6f9f461bc9a55915c8f6bf342f79f84d393964b0d5b3aee9979f43c122c480cf299a75b3a04c5b86c6551eaf309b92bbe3a8e9784f72aa9db7d49cb0b WHIRLPOOL e37bef2d9dc973f88d01539b06e080850f8ae518b01a54cd6b1b1eed3da84b86d3197a615dd3a90b1d5902616b6fd9dcec1592bd71c487ac97dc52d269a0003d
 DIST sqlparse-0.1.4.tar.gz 47932 SHA256 6a8b1d9e616e296bf93faeb546c0e6d2410467094951e2f4b98b0531ac9305fb SHA512 2ef31eb3d03eaf8b2647d435831ee24271dec6598bdcb25d0e472ae0e3cf0d6187978c65daa01b09de190d50fdf6dc89505d72af97b140b5d3689582e1bb8b2a WHIRLPOOL e2c070de2168dd203f9baa8fe23c8de2cbe4037ff611b6657363dd6a8d05f45c1dd29af9a96ecab49f531872bdcb8d2d7560f263ea8489e7c5a9e014f3d049e1
 DIST sqlparse-0.1.5.tar.gz 46138 SHA256 dfbbbf50e86147ea2a2f32c2c4bc0743faec1edd02d3201b4e9a32ffa41e00a7 SHA512 9bccf67e53c8c40bc315d8998db00cb70dd145698313196287c31be321a6fc96f8ac44fb74ee581e87e8b9af484354019fb6296d750ac9efd080ddc55c6cb4f5 WHIRLPOOL 89c595569bec70c7cc561d193acb38048ed8c22abeb42cbc8bacbb832a3aef6b20845d2c499afd04c75574fa4016e10242a966481b1c55a455d32997098ed819
 EBUILD python-sqlparse-0.1.3.ebuild 661 SHA256 47245d092f776a9000b4349431badd4b019be4855bed73063968627c9b2ce7e7 SHA512 3bc20d745645a04d7a765a0ba7c41df8e4b0fc8304a1c71a972ca3c68690d7da47a030a18f6d0bae8b92cde0a78ae58e100f9d8fd38c25cabfa92e9e4b4d2f41 WHIRLPOOL c9ccd68dc0eb83d58747f3f2fc46a6774cf9c6c821d296e63cba3054c03609cd57b4f48c9d72ac9ba835938c0bee4ff80c1e5921162ded6a82b6f98073636c86
 EBUILD python-sqlparse-0.1.4.ebuild 661 SHA256 d2a62f07c2d12d21aff99a70062e70c765269704ae2473d1e4c94c211aaf8d00 SHA512 69ba9ae8cbddb3cc0a5f81af78eae55970921e8650feb77eb86b142c3c00558e7f1c685cadae7654d4ad33b13e476f3f04886a10b19153482c115c52ef03a003 WHIRLPOOL 11086c91d09033c3d11cf7a8561722c7cdaa87e1dd13b65f5678d560b189b0b12137257299d0eff1ebed39afd27eab76ab13b407c3852bc265a8570338e4ac91
-EBUILD python-sqlparse-0.1.5-r1.ebuild 818 SHA256 71446d8b146e696fa60e0b0c0bbe59d974a538d8fde6881327e5e7c5926e9a79 SHA512 af584979225818baf7edf201a62c56edd3299c6e9bdb2ee747f790c0e5e0d0d39822f41d38c6c681b4f75ccc6fbf0b0cb61eeac989c1217b07322e28b2019ecb WHIRLPOOL be929930884100a6e4fb3054578121e416031a5c7219a6c6424d9d19efc9731879a224641391308823bfb0c96c80ff1728f4f28702e04c2aebb388986fb5cfc2
+EBUILD python-sqlparse-0.1.5-r1.ebuild 820 SHA256 11e7ccc5a073b063ff439b02b1cade931a234e3ff59437030fe3878f58081c33 SHA512 9bd76b1f992ed6657847f155199e44b49fa5ec69a5e790d867590b2c37788c7a544633ff86bd451c69029fa6705c7342f9e3f8bfc5517fed181e6f986f7ebfcb WHIRLPOOL 981dfc1f74c5a58f36e02810114272f59d5df81eb7688137d033b5f836d1fca2dae38fbc820b5e371753d9e87137237576d12c1bef128216ee5d7666385730c1
 EBUILD python-sqlparse-0.1.5.ebuild 755 SHA256 da0f340b9c8fb67aa930ca6a929ea81e82f38bf7908ee2f4cc9619a0f4e9d369 SHA512 a04c04213679927626ed21055c4d69d73a7380c83ef9c4d6fef5bbf1e23ece60bcdd3702e5f4e8b917b4398aef7d4e9f201dc443950c6b7dd0f02e8436cc0dbc WHIRLPOOL 89386b13b55860d3dc49fc8172da032e9bcbddc1912a34a9b2979ff87827fc03fefceed40f09bba6a361b730efe8fee7766c37f8974786622b341f3609fae2bf
-MISC ChangeLog 1937 SHA256 06782b754ab3cb6829679438cbb15529815e23f9136eeb6dde54c850bb017bb3 SHA512 75070e6b5a49f79a70f50ad8b58fad458d00db5b46d610d6c9b4d12e4dd04ebf5e3635e4e210862df13544d6a035d46375b97ebaf7c9a9e3b42f5e50f368d129 WHIRLPOOL 6b542226c91ef9a026f5aeafb35369819ec82852db9ef73290cfdc81e889f1b594889cb732855a6b9e2bd9177b3fbe9f96856c23ef7a52d5bf3a9a2b993a8e4c
+MISC ChangeLog 2050 SHA256 5f1be57ef90af5257f766bddf8e0224ec1975c7c5c97bad567e7e153f5d49133 SHA512 6fdc38719e15be33f39554c70219ece098ebe48870d9de49e46d1b43872d542245c4e9d36cb0cf85e9446326c5d3751965d4c16602af2ec475a41c1ae5cf0651 WHIRLPOOL f7ab070ec0b15da64cb5135f621bc840df45a6427baf907fbe6668168656b50a9ca97f407e5c72747493e65b1c603e90256152120e3d13e106fc3306231c4a06
 MISC metadata.xml 316 SHA256 ac49fe2205a8a2f4aeb698c1f614f8e382119b3297b0af5d3268090cbcffdbfd SHA512 d84cd678a787471a98778cdaca6f08d60d2b7f3a49ae0d426bc4988d6321373279020bb77fb15b576289351a48806e1cb40899dd3c70d05ab85a04e6757c7820 WHIRLPOOL db92cc101475066c70f738b88ce6dd3bc07324efc0ad35901149bea12c37f775e2bfbcc5e3dda600bcef3ea4f3dc139ce3a1413832d3cf4557995218f3214790
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSLGxwAAoJELp701BxlEWfSjEQAMOO63VGRLebaAMS2ORW/M7g
-0Cot5G+REIGV3D8Yx8+SODnKAqIiZRIJIR0Q1ewQHX/YicrHPb0tX7WBHWvNxp3q
-w5CSrpzDMpQcN9wwyhHjqxeDw/YO7NFbd1f8UU1fFaDkxHYfCKYVwLNCQWjP1L7X
-cHb5QE/k5vDZScGslrAblvTwPbzxKC6SGzlPQWHzW/RrEspqFPPKRId16FKXHIh+
-eKL4Qg0dcueq+2GOdWNVsgxdCrfYyUL3SDsEIhWoWUwO4fhb7jdrUW1eXbdwMsOa
-eHZRAB/57B4q5ZlsKEt64uUQcIuPS/v6ZCfAxPoYzwJdjbNRVFcxfFo9ys2q1fsk
-c+6y8uQGJmzKJHpZ6XOw5pu3lIeEOcO4gT2r3snnCND8mBxdqSwRkdaVUsg6ozBT
-sy+l7gXUVN4qBQyd8uTNEDtICxUl42ahOhw8Cfjl+nl62Sdmp176Av+juWTShtZL
-SG9O9ltNFocpJYzwf3OpZdy2QTC/m2XSdARkKlte2FG7s60VuSnfnD2axuFOfOAk
-gSwrsel0B0KOoD37t5D6Noz8HW6hVYe/x4FeGtuh7+kt+JDuLmsRo68JHzOzDWHS
-Onsd82Bg7bJ5qQvSYPzsdINCv9tyHnRXlqlte2NNF7KiVJk3q8nPA2S0RSI5fWUd
-ZoLMFXRTpSdemJ086dYA
-=aGNt
+iEYEAREIAAYFAlIshMUACgkQkKaRLQcq0GLF+wCdHaU4S6mbuuMe3YqHjkZWCA0z
+wrUAoJDbBisqKqmzNBmGGEDRPmH0EYZi
+=F1MV
 -----END PGP SIGNATURE-----
