@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/python-geoclue
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-geoclue/ChangeLog,v 1.15 2013/09/08 12:24:25 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-geoclue/ChangeLog,v 1.16 2013/09/08 14:01:07 maekke Exp $
+
+  08 Sep 2013; Markus Meier <maekke@gentoo.org> python-geoclue-0.1.0-r1.ebuild:
+  arm stable, bug #481896
 
   08 Sep 2013; Agostino Sarubbo <ago@gentoo.org> python-geoclue-0.1.0-r1.ebuild:
   Stable for amd64, wrt bug #481896
