@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/python-sqlparse
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-sqlparse/ChangeLog,v 1.14 2013/09/08 12:24:34 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-sqlparse/ChangeLog,v 1.15 2013/09/08 14:01:56 maekke Exp $
+
+  08 Sep 2013; Markus Meier <maekke@gentoo.org>
+  python-sqlparse-0.1.5-r1.ebuild:
+  arm stable, bug #481896
 
   08 Sep 2013; Agostino Sarubbo <ago@gentoo.org>
   python-sqlparse-0.1.5-r1.ebuild:
